Preserve leading spaces in wrapped text